--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: > # this means to ignore newlines until "email:"
 
 email: alex.gil@yale.edu
 #blog logo
-logo: "/assets/images/df_logo.jpg"
+logo: "/assets/images/creative-forum-abb-logo.png"
 float_logo: true # true, false (default)
 
 # blog cover
