--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ gems:
 # Site settings
 title: "The Creative Forum"
 description: > # this means to ignore newlines until "email:"
-  Where creativity meets scholarship at Yale
+  At The Yale Department of Spanish & Portuguese
 
 email: alex.gil@yale.edu
 #blog logo
